# macro_rules_attribute-rs

./: Cargo.toml  LICENSE  README.md  cargo_publish.sh  change_version.sh  rust-toolchain.toml
.github/workflows/: CI.yml  future-proof.yml
src/: lib.rs
src/proc_macro/: Cargo.toml  mod.rs
