[lib]
proc-macro = true
path = "mod.rs"

[package]
name = "macro_rules_attribute-proc_macro"
version = "0.3.0"  # Keep in sync
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2018"

description = "Use declarative macros as proc_macro attributes or derives"
repository = "https://github.com/danielhenrymantilla/macro_rules_attribute-rs"
license = "MIT"

[dependencies]

[features]
verbose-expansions = []
